STNG-157 API-Version header check now supporting empty header list